export const boldkitTheme = {
	name: 'boldkit',
	cssVars: {
		radius: '0rem',
		shadow: '4px 4px 0px hsl(var(--shadow-color))',
	},
};
